# ISA-ArchP

./: Cargo.toml  README.md  isa.txt
examples/: fib.asm  minesweeper.asm  snake.asm  trapping-rain-water.asm
src/: assembler.rs  cli.rs  instructions.rs  macro_instructions.rs  main.rs  operand.rs  operand_types.rs  pass1.rs  pass2.rs  pseudo_instructions.rs  testkit.rs  utils.rs
src/instructions/: arithmetic.rs  branch.rs  call_ret.rs  compare.rs  display.rs  load_store.rs  logic.rs  pixel.rs  random.rs  shift.rs  stack.rs
src/macro_instructions/: als_imm32.rs  auto_imm.rs  branch_imm.rs  cmp_imm32.rs  load_imm32.rs
src/pseudo_instructions/: clear.rs  inc_dec.rs  load_imm32.rs  mv.rs
tests/: snaptest.rs
tests/snapshots/: examples@fib.asm.snap  examples@minesweeper.asm.snap  examples@snake.asm.snap  examples@trapping-rain-water.asm.snap
